force-app/main/default/objects/leaseworks__Rent__c/leaseworks__Rent__c.object-meta.xml
<CustomObject>
    <description>Rent Slips, typically generated monthly for each Rent Schedule, detail rent calculations like amounts and cost breakdowns. They trigger invoice generation per payment cycle, usually done automatically by Rent Studio. But for importing data from other systems or new leases, manual upload via a data loader is also possible.
Rent Slips for Rent Type &apos;Fixed&apos;, &apos;Floating&apos;, &apos;Seasonal&apos;, &apos;PBH&apos;, typically generated monthly for each Rent Schedule, detail rent calculations like amounts and cost breakdowns. They trigger invoice generation per payment cycle, usually done automatically by Rent Studio. But for importing data from other systems or new leases, manual upload via a data loader is also possible.
[MODULE: Contract]
[LOAD: Optional]
[PREREQUISITES: Rent Schedule]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Rent Slip</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rent Slip</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>