force-app/main/default/objects/leaseworks__Rent__c/fields/Floating_Interest_Portion__c.field-meta.xml
<CustomField>
    <fullName>Floating_Interest_Portion__c</fullName>
    <description>Captures the interest portion of the Floating Rent Amount on the Rent Slip</description>
    <formula>leaseworks__Invoiced_Amount__c  -  leaseworks__Applicable_Rent_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Captures the interest portion of the Floating Rent Amount on the Rent Slip</inlineHelpText>
    <label>Floating Interest Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>