force-app/main/default/objects/leaseworks__Rent__c/fields/Invoice_Reference_Number_Local__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_Number_Local__c</fullName>
    <description>This was added at the time of Implementation</description>
    <label>Invoice Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>