force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid__c</fullName>
    <label>Z_Unused Amount Paid</label>
    <summarizedField>leaseworks__Rent_Payment__c.leaseworks__Amount__c</summarizedField>
    <summaryForeignKey>leaseworks__Rent_Payment__c.leaseworks__Rent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>