force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Applicable_Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Applicable_Rent_Rate__c</fullName>
    <label>_Applicable Rent Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>