force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Average_SLR_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_SLR_Amount__c</fullName>
    <description>Replicates the value from the Average SLR Amount provided at the rent schedule level.</description>
    <inlineHelpText>Replicates the value from the Average SLR Amount provided at the rent schedule level.</inlineHelpText>
    <label>Average SLR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>