force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Base_Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Rent_Rate__c</fullName>
    <description>The agreed fixed base rent amount for the PBH Rent Schedule, expressed in the selected billing currency.</description>
    <formula>leaseworks__Rent_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The agreed fixed base rent amount for the PBH Rent Schedule, expressed in the selected billing currency.</inlineHelpText>
    <label>Base Rent Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>