force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Comment_For_Misc_Payable_Receivable__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment_For_Misc_Payable_Receivable__c</fullName>
    <label>Comments On Rent Slip Correction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>