force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Depreciation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Depreciation__c</fullName>
    <label>Z_Unused_2109_ Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>