force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Depreciation_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Depreciation_F__c</fullName>
    <formula>leaseworks__Depreciation__c</formula>
    <label>Z_Unused_2109_Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>