force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Effective_PBH_Fixed_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_PBH_Fixed_Rent__c</fullName>
    <description>PBH Fixed portion after the proration / Escalation</description>
    <inlineHelpText>PBH Fixed portion after the proration / Escalation</inlineHelpText>
    <label>_Effective PBH Fixed Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>