force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Fee_Slip__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Fee Slip field in the Rent Slip object is a Lookup relationship linking the Rent Slip to its associated Fee Slip record.</description>
    <inlineHelpText>Indicates the fee slip record related to this rent slip.</inlineHelpText>
    <label>Fee Slip</label>
    <referenceTo>leaseworks__Fee_Slip__c</referenceTo>
    <relationshipLabel>Rent Slip</relationshipLabel>
    <relationshipName>Rent_Slip</relationshipName>
    <type>Lookup</type>
</CustomField>