force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Final_Rent_Slip_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final_Rent_Slip_Amount__c</fullName>
    <description>Indicates final rent amount for this rent period including adjustment. Used when multi-currency is enabled</description>
    <formula>leaseworks__Total_Due__c</formula>
    <inlineHelpText>Indicates final rent amount for this rent period including adjustment. Used when multi-currency is enabled</inlineHelpText>
    <label>Final Rent Slip Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>