force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Flight_Hours_For_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Flight_Hours_For_Month__c</fullName>
    <label>Z_Unused_2109_Flight Hours For Month</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>