force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__For_Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__For_Month_Ending__c</fullName>
    <defaultValue>date(year(today())+(if(month(today())&gt;=11,1,0)),
(mod(month(today()),12)+2),
1)-1</defaultValue>
    <description>Changing to default to end of next month. Source: Fortress.
Date Due will be made optional.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>