force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <description>The initial Invoice Date when the invoice was created.</description>
    <inlineHelpText>The initial Invoice Date when the invoice was created.</inlineHelpText>
    <label>Invoice Date (Initial)</label>
    <type>Date</type>
</CustomField>