force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Invoice_Date_Curr__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date_Curr__c</fullName>
    <formula>leaseworks__Link_to_Invoice__r.leaseworks__Invoice_Date__c</formula>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>