force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Invoice_Description_Log__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Description_Log__c</fullName>
    <label>Z_Unused_2109_Invoice Description/Log</label>
    <length>100</length>
    <type>Text</type>
</CustomField>