force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Invoice_Exists_for_Prev_Slip__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Exists_for_Prev_Slip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Invoice exists for previous Rent Slip for the same period</description>
    <label>_Invoice Exists for Prev Slip</label>
    <type>Checkbox</type>
</CustomField>