force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_ID__c</fullName>
    <label>Z_Unused_2109_Invoice ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>