force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <formula>IF( ISBLANK( leaseworks__RentPayments__r.leaseworks__Lessee_New__c ) , HYPERLINK(&quot;/&quot; &amp; leaseworks__RentPayments__r.leaseworks__Operator_New__r.Id , leaseworks__RentPayments__r.leaseworks__Operator_New__r.Name)  , HYPERLINK(&quot;/&quot; &amp; leaseworks__RentPayments__r.leaseworks__Lessee_New__r.Id , leaseworks__RentPayments__r.leaseworks__Lessee_New__r.Name))</formula>
    <label>Lessee</label>
    <type>Text</type>
</CustomField>