force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Link_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Link_to_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leaseworks__RentPayments__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Invoice__c.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Rent Schedule</relationshipLabel>
    <relationshipName>Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>