force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Minimum_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Minimum_Total_Amount__c</fullName>
    <description>The lowest total rent amount that can be billed over the contract term, in the selected billing currency.</description>
    <formula>leaseworks__PBH_Total_Minimum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lowest total rent amount that can be billed over the contract term, in the selected billing currency.</inlineHelpText>
    <label>Minimum Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>