force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Net_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Monthly_Income__c</fullName>
    <formula>leaseworks__Monthly_Income__c - leaseworks__Misc_Payable__c +  leaseworks__Misc_Receivable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2109_Net Monthly Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>