force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Net_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Rent__c</fullName>
    <formula>leaseworks__Total_Due__c -  leaseworks__MRO_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount due with interest, adjusted for any MRO payments for current month</inlineHelpText>
    <label>Z_Unused_2109_Net Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>