force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__New_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Invoiced_Amount__c</fullName>
    <description>Indicates the Total Invoiced Amount on the associated invoice. Used when multi-currency is enabled</description>
    <formula>leaseworks__Invoiced_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the Total Invoiced Amount on the associated invoice. Used when multi-currency is enabled</inlineHelpText>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>