force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__New_Off_Wing_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Off_Wing_Rent__c</fullName>
    <description>Represents the rental fee applicable during off-wing or non-operational periods. Used when multi-currency is enabled.</description>
    <formula>leaseworks__Off_Wing_Rent__c</formula>
    <inlineHelpText>Represents the rental fee applicable during off-wing or non-operational periods. Used when multi-currency is enabled.</inlineHelpText>
    <label>Off Wing Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>