force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__New_Rent_Slip_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Rent_Slip_Adjustments__c</fullName>
    <description>This field displays the total of all adjustment amounts from rent slip line items, excluding those with a Line Type of &apos;Rent&apos;.</description>
    <formula>leaseworks__Rent_Slip_Adjustments__c</formula>
    <inlineHelpText>This field displays the total of all adjustment amounts from rent slip line items, excluding those with a Line Type of &apos;Rent&apos;.</inlineHelpText>
    <label>Rent Slip Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>