force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Off_Wing_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Off_Wing_Rent__c</fullName>
    <formula>leaseworks__Stepped_Rent__r.leaseworks__Off_Wing_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Wing Rent($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>