force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Paid_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Paid_Amount_New__c</fullName>
    <description>Displays the amount paid toward the linked invoice. Used when multi-currency is enabled</description>
    <formula>leaseworks__Paid_Amount_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the amount paid toward the linked invoice. Used when multi-currency is enabled</inlineHelpText>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>