force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Amount__c</fullName>
    <inlineHelpText>Sum of all assemblies PBH amounts for utilization period prior to any adjustments</inlineHelpText>
    <label>PBH Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>