force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Fixed_Rent_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Fixed_Rent_new__c</fullName>
    <description>The fixed PBH rent amount for this rent slip, expressed in the selected billing currency.</description>
    <formula>leaseworks__PBH_Fixed_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fixed PBH rent amount for this rent slip, expressed in the selected billing currency.</inlineHelpText>
    <label>PBH Fixed Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>