force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Maximum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Maximum__c</fullName>
    <formula>leaseworks__Stepped_Rent__r.leaseworks__Maximum_PBH_Amount__c</formula>
    <inlineHelpText>Maximum amount cap per assembly for utilization period</inlineHelpText>
    <label>PBH Maximum($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>