force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Minimum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Minimum__c</fullName>
    <formula>leaseworks__Stepped_Rent__r.leaseworks__Minimum_PBH_Amount__c</formula>
    <inlineHelpText>Minimum amount threshold per assembly for utilization period</inlineHelpText>
    <label>PBH Minimum($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>