force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Rent_Amount_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Rent_Amount_Adjustment__c</fullName>
    <description>A single PBH rent adjustment amount applied to this rent slip, expressed in the selected billing currency.</description>
    <formula>leaseworks__Y_Hidden_PBHRentAmtAdj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A single PBH rent adjustment amount applied to this rent slip, expressed in the selected billing currency.</inlineHelpText>
    <label>PBH Rent Amount Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>