force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__PBH_Total_Calculated_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Total_Calculated_new__c</fullName>
    <description>The calculated total PBH rent before any adjustments, expressed in the selected billing currency.</description>
    <formula>leaseworks__PBH_Total_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated total PBH rent before any adjustments, expressed in the selected billing currency.</inlineHelpText>
    <label>PBH Total Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>