force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Period_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Period_Days__c</fullName>
    <formula>leaseworks__For_Month_Ending__c  -  leaseworks__Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The &#39;Period Days&#39; value reflects calendar days. If the pro rata rent is based on the 30/360 method, the number of days used in the calculation may be different than shown.</inlineHelpText>
    <label>Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>