force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Predelivery__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Predelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this if the rent slip belongs to the Predelivery rental</description>
    <inlineHelpText>Enable this if the rent slip belongs to the Predelivery rental</inlineHelpText>
    <label>Predelivery</label>
    <type>Checkbox</type>
</CustomField>