force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Prev_Income_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prev_Income_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2109_Prev Income Schedule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leaseworks__RentPayments__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Rent__c.leaseworks__RentPayments__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Rent__c</referenceTo>
    <relationshipLabel>Rent Slip</relationshipLabel>
    <relationshipName>Prev_Income_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>