force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Previous_Month_Income__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Month_Income__c</fullName>
    <formula>leaseworks__Prev_Income_Schedule__r.leaseworks__Net_Monthly_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2109_Previous Month Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>