force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Amount_Due_After_Prorate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Amount_Due_After_Prorate__c</fullName>
    <description>For internal apex calculation.</description>
    <label>_Rent Amount Due After Prorate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>