force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Due_Date__c</fullName>
    <description>The lessee must pay the rent slip by this date, which will also be recorded in the &#39;Date Payment Due&#39; field on the invoice. The payment deadline is determined by the Rent Due Type, Rent Due Day Setting, and Due Date Correction options configured in the Rent Schedule. To override the system-calculated due date, utilize the &#39;Override Rent Due Date&#39; field, and user-entered values will be respected.</description>
    <inlineHelpText>The lessee must pay the rent slip by this date, which will also be recorded in the &#39;Date Payment Due&#39; field on the invoice. 
The payment deadline is determined by the Rent Due Type, Rent Due Day Setting, and Due Date Correction options configured in the Rent Schedule. To override the system-calculated due date, utilize the &#39;Override Rent Due Date&#39; field, and user-entered values will be respected.</inlineHelpText>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>