force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Payable_To_Head_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Payable_To_Head_Lease__c</fullName>
    <formula>/*Total_Due__c *  Rent_Payable_To_Head_Lease_Pct__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rent Amount payable to Head Lease if this is a Head Lease-Sub Lease arrangement.</inlineHelpText>
    <label>Z_Unused_2406_Rent Payable to HeadLessor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>