force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Payable_To_Head_Lease_Pct__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Payable_To_Head_Lease_Pct__c</fullName>
    <formula>/*RentPayments__r.Legal_Entity__r.Rent_Payable_To_Head_Lease__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rent % payable to Head Lease if this is a Head Lease-Sub Lease arrangement.</inlineHelpText>
    <label>Z_Unused_2406_Rent Payable toHeadLessor%</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>