force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Reset_Date__c</fullName>
    <inlineHelpText>This is the date on which the Interest Rate is fetched for the rent period (typically 2 days before the rent period begins)</inlineHelpText>
    <label>Rent Reset Date</label>
    <type>Date</type>
</CustomField>