force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Type__c</fullName>
    <formula>TEXT(leaseworks__Stepped_Rent__r.leaseworks__Rent_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent Type</label>
    <type>Text</type>
</CustomField>