force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Rental_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rental_Adjustment_Amount__c</fullName>
    <formula>leaseworks__Rental_Adjustment_Factor__c *  leaseworks__Final_Interest_Rate__c * 100 *  leaseworks__Escalation_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rental Adjustment Factor  and escalation applied to (actual minus assumed) interest rate</inlineHelpText>
    <label>Rental Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>