force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__RentPayments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RentPayments__c</fullName>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipName>RentPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>