force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revenue_Recognized__c</fullName>
    <description>Shows the total revenue earned during the initial accounting period/calendar month of the rent slip spanning across two months.</description>
    <inlineHelpText>Shows the total revenue earned during the initial accounting period/calendar month of the rent slip spanning across two months.</inlineHelpText>
    <label>Revenue Recognized($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>