force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Revenue_Recognized_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Revenue_Recognized_new__c</fullName>
    <description>The portion of rent recognized as revenue, expressed in the selected billing currency.</description>
    <formula>leaseworks__Revenue_Recognized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The portion of rent recognized as revenue, expressed in the selected billing currency.</inlineHelpText>
    <label>Revenue Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>