force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Stepped_MultiRent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Stepped_MultiRent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stepped Multi Rent</label>
    <referenceTo>leaseworks__SteppedMultiRent__c</referenceTo>
    <relationshipLabel>Rent Schedule</relationshipLabel>
    <relationshipName>Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>