force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Stepped_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Stepped_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Step Rent Record(Rent Schedule)</description>
    <inlineHelpText>Lookup to Rent Schedule(Step Rent)</inlineHelpText>
    <label>Rent Schedule</label>
    <referenceTo>leaseworks__Stepped_Rent__c</referenceTo>
    <relationshipLabel>Rent Slip</relationshipLabel>
    <relationshipName>Rent_Period</relationshipName>
    <type>Lookup</type>
</CustomField>