force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Total_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Due__c</fullName>
    <formula>IF(!ISBLANK( leaseworks__Rent_Slip_Adjustments__c ),leaseworks__Rent_Due_Amount__c + leaseworks__Rent_Slip_Adjustments__c  ,leaseworks__Rent_Due_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rent Slip Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>