force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Total_Engine_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Engine_Cycles__c</fullName>
    <label>Z_Unused 2001 Engine Cycles For Month</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>