force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Total_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Engine_Hours__c</fullName>
    <label>Z_Unused 2001 Engine Hours For Month</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>