force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Unearned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Unearned_Revenue__c</fullName>
    <description>Shows the unearned revenue during the initial accounting period/calendar month of the rent slip spanning across two months.</description>
    <inlineHelpText>Shows the unearned revenue during the initial accounting period/calendar month of the rent slip spanning across two months.</inlineHelpText>
    <label>Unearned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>