force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Y_Hidden_Invoice_Day__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Invoice_Day__c</fullName>
    <formula>if(text(leaseworks__Stepped_Rent__r.leaseworks__Invoice_Generation_Day__c)&lt;&gt;&#39;Current Day&#39;,value(text(leaseworks__Stepped_Rent__r.leaseworks__Invoice_Generation_Day__c )),0)</formula>
    <label>_Invoice Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>