force-app/main/default/objects/leaseworks__Rent__c/fields/leaseworks__Y_Hidden_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Rent Schedule</relationshipLabel>
    <relationshipName>Rent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>