force-app/main/default/objects/leaseworks__Rent__c/fields/Rent_Slip_External_key_Local__c.field-meta.xml
<CustomField>
    <fullName>Rent_Slip_External_key_Local__c</fullName>
    <description>this was added at the time of Implementation</description>
    <label>Rent Slip External key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>