force-app/main/default/objects/leaseworks__Rent__c/fields/Transaction_Currency_Local__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency_Local__c</fullName>
    <description>Represents the currency to be displayed on the Invoices.</description>
    <formula>TEXT(leaseworks__Stepped_Rent__r.Local_Currency_local__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Currency</label>
    <type>Text</type>
</CustomField>