force-app/main/default/objects/leaseworks__Rent__c/validationRules/leaseworks__blockAverageUpdateIfInvoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__blockAverageUpdateIfInvoiced</fullName>
    <active>true</active>
    <description>Restrict the Average SLR Amount field update, when the rent slip is already Invoiced</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,OR(!ISBLANK(leaseworks__Link_to_Invoice__c), leaseworks__Override_SLR_Amount__c = true ) ,  ISCHANGED(leaseworks__Average_SLR_Amount__c )    )</errorConditionFormula>
    <errorDisplayField>leaseworks__Average_SLR_Amount__c</errorDisplayField>
    <errorMessage>Modifying the Average SLR Amount is not possible once an invoice has been generated or Override SLR Amount? is checked.</errorMessage>
</ValidationRule>