force-app/main/default/objects/leaseworks__Rent__c/validationRules/leaseworks__Check_Override_to_enter_OtherCosts.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Check_Override_to_enter_OtherCosts</fullName>
    <active>false</active>
    <description>Other Costs can only be entered if the Override is checked</description>
    <errorConditionFormula>false /*AND(!Override_Amount_Due__c,! ISBLANK( Other_Cost__c ))*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Other_Cost__c</errorDisplayField>
    <errorMessage>Please check Override Amount Due? to enter Other Costs</errorMessage>
</ValidationRule>